AC_INIT([e2openplugin-InfoBarTunerState],[0.6.4],[https://github.com/betonme/e2openplugin-PushService/issues])
AM_INIT_AUTOMAKE([foreign])

AC_PATH_PROG(MSGFMT, msgfmt, AC_MSG_ERROR(Could not find msgfmt))
AM_PATH_PYTHON

AC_CONFIG_FILES([
Makefile
meta/Makefile
src/Makefile
src/Controller/Makefile
src/Services/Makefile
src/Services/gntp/Makefile
src/Services/mail/Makefile
])
AC_OUTPUT
